# pybeamprofiler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pybeamprofiler_demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
src/pybeamprofiler/: __init__.py  basler.py  beamprofiler.py  camera.py  constants.py  flir.py  gen_camera.py  simulated.py  utils.py
tests/: README.md  conftest.py  test_camera.py  test_definitions.py  test_edge_cases.py  test_fitting.py  test_genicam.py  test_profiler.py  test_utils.py
