[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybeamprofiler"
version = "0.0.1"
description = "Real-time laser beam profiler with Gaussian fitting for GenICam cameras"
readme = "README.md"
authors = [
  { name = "C.-A. Chen", email = "acechen@cirx.org" },
]
license = { file = "LICENSE" }
keywords = ["laser", "beam-profiling", "gaussian-fitting", "genicam", "flir", "basler", "camera"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "plotly",
    "dash",
    "ipywidgets",
    "Pillow",
    "harvesters>=1.4.0",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/acechenx/pybeamprofiler"
"Bug Tracker" = "https://github.com/acechenx/pybeamprofiler/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pybeamprofiler"]

[tool.uv]
# harvesters depends on the `genicam` PyPI package, which has no macOS wheel.
# On macOS, genicam is provided by the camera SDK (Pylon, Spinnaker) installed
# into the Python environment. This override tells uv to skip resolving the
# PyPI genicam wheel on macOS so `uv sync` succeeds.
override-dependencies = [
    "genicam>=0 ; sys_platform != 'darwin'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a6",
    "pre-commit>=4.5.0",
]
matplotlib = [
    "matplotlib>=3.0",  # Optional fallback for command-line streaming
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pybeamprofiler --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pybeamprofiler"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.10"
